[gd_scene load_steps=27 format=2]

[ext_resource path="res://objects/cart.gd" type="Script" id=1]
[ext_resource path="res://sprites/cart_shade.png" type="Texture" id=2]
[ext_resource path="res://character_assets/goat.png" type="Texture" id=3]
[ext_resource path="res://character_assets/cart.png" type="Texture" id=4]
[ext_resource path="res://character_assets/rod.png" type="Texture" id=5]
[ext_resource path="res://character_assets/wheel_back.png" type="Texture" id=6]
[ext_resource path="res://character_assets/wheel_front.png" type="Texture" id=7]
[ext_resource path="res://sprites/neina_animations_1.png" type="Texture" id=8]
[ext_resource path="res://sprites/leszek_animations.png" type="Texture" id=9]
[ext_resource path="res://sprites/hiryu_animations.png" type="Texture" id=10]
[ext_resource path="res://sprites/progress_under.png" type="Texture" id=11]
[ext_resource path="res://sprites/progress_over.png" type="Texture" id=12]
[ext_resource path="res://audio/sfx_carriage_hooves.wav" type="AudioStream" id=13]
[ext_resource path="res://audio/sfx_drop_on_wood.wav" type="AudioStream" id=14]
[ext_resource path="res://audio/sfx_drop_gold-001.wav" type="AudioStream" id=15]
[ext_resource path="res://audio/sfx_drop_gold-002.wav" type="AudioStream" id=16]
[ext_resource path="res://audio/sfx_drop_gold-003.wav" type="AudioStream" id=17]
[ext_resource path="res://audio/sfx_pick_gold-001.wav" type="AudioStream" id=18]
[ext_resource path="res://audio/sfx_pick_gold-002.wav" type="AudioStream" id=19]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 60, 20 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 50, 35 )

[sub_resource type="Animation" id=3]

resource_name = "goat_move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("goat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("goat2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 4 ]
}

[sub_resource type="Animation" id=4]

loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("wheel_front:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.901 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 1, 6, 2, 7, 3, 8, 4, 9, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wheel_back:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 9, 0, 5, 1, 6, 2, 7, 3, 8 ]
}

[sub_resource type="RectangleShape2D" id=5]

extents = Vector2( 5, 11.8716 )

[sub_resource type="RectangleShape2D" id=6]

extents = Vector2( 20, 34 )

[sub_resource type="AudioStreamRandomPitch" id=7]

audio_stream = ExtResource( 14 )
random_pitch = 1.3

[node name="cart" type="KinematicBody2D"]
position = Vector2( 0, 0.224616 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -26.9038 )
shape = SubResource( 1 )

[node name="shade" type="Sprite" parent="."]
position = Vector2( 23.9431, -19.2713 )
scale = Vector2( 3, 1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"drop_point",
]]
position = Vector2( 0, -6.90382 )
input_pickable = false
collision_layer = 8192
collision_mask = 512

[node name="TreasureReach" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.839216, 0.984314, 0.0156863, 1 )
position = Vector2( 40, -20 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "goat_move"
anims/goat_move = SubResource( 3 )

[node name="shade2" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -50, -14 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="shade3" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -60, 0 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="goat" type="Sprite" parent="."]
position = Vector2( -50, -40.4492 )
texture = ExtResource( 3 )
vframes = 5
hframes = 2
frame = 4

[node name="cart" type="Sprite" parent="."]
position = Vector2( 20, -47 )
texture = ExtResource( 4 )
hframes = 5

[node name="rod" type="Sprite" parent="cart"]
show_behind_parent = true
position = Vector2( -60, 19.647 )
texture = ExtResource( 5 )
hframes = 5
frame = 2

[node name="wheel_back" type="Sprite" parent="cart"]
show_behind_parent = true
position = Vector2( 8.38234, 20.5001 )
texture = ExtResource( 6 )
hframes = 10
frame = 1

[node name="wheel_front" type="Sprite" parent="cart"]
position = Vector2( 5.50005, 29.3636 )
texture = ExtResource( 7 )
hframes = 10
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="cart"]
autoplay = "move"
anims/move = SubResource( 4 )

[node name="wheels_bump" type="Area2D" parent="cart"]
collision_layer = 0
collision_mask = 32

[node name="Shape2D" type="CollisionShape2D" parent="cart/wheels_bump"]
position = Vector2( 5, 37 )
shape = SubResource( 5 )

[node name="wheel_position" type="Position2D" parent="cart"]
position = Vector2( 5, 45 )

[node name="character1" type="Sprite" parent="cart"]
visible = false
position = Vector2( -25.2836, -19.3854 )
texture = ExtResource( 8 )
hframes = 6
frame = 5

[node name="character2" type="Sprite" parent="cart"]
visible = false
position = Vector2( -23, -28 )
texture = ExtResource( 9 )
hframes = 6
frame = 5

[node name="character3" type="Sprite" parent="cart"]
visible = false
position = Vector2( -25.2836, -19.3854 )
texture = ExtResource( 8 )
hframes = 6
frame = 5

[node name="character4" type="Sprite" parent="cart"]
visible = false
position = Vector2( -24, -11 )
texture = ExtResource( 10 )
hframes = 6
frame = 5

[node name="goat2" type="Sprite" parent="."]
position = Vector2( -60, -27.2708 )
texture = ExtResource( 3 )
vframes = 5
hframes = 2
frame = 4

[node name="treasure" type="Node2D" parent="." groups=[
"treasure",
]]
position = Vector2( 60, -27.353 )

[node name="VisibilityNotifier" type="VisibilityEnabler2D" parent="."]
position = Vector2( 50.6231, -30.2246 )

[node name="drive_control" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="drive_control"]
position = Vector2( -16.9565, -27.1869 )
shape = SubResource( 6 )

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -56.0
margin_top = -73.0
margin_right = -16.0
margin_bottom = -33.0
max_value = 60.0
value = 20.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 12 )
fill_mode = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -7.0

[node name="drop_on_wood" type="AudioStreamPlayer" parent="."]
stream = SubResource( 7 )

[node name="sfx" type="Node" parent="."]

[node name="drop_gold_1" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 15 )

[node name="drop_gold_2" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 16 )

[node name="drop_gold_3" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 17 )

[node name="pick_gold_1" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 18 )

[node name="pick_gold_2" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 19 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="cart/wheels_bump" to="." method="_on_bump_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="drive_control" to="." method="_on_drive_control_body_entered"]
[connection signal="body_exited" from="drive_control" to="." method="_on_drive_control_body_exited"]
